syntax = "proto3";

message _DexItem {
  string contract_address     = 1;
  string name                 = 2;
  string symbol               = 3;
}
